# rust-ad-blocker

./: Cargo.toml  README.md  build.js  package-lock.json  package.json
extension/: background.html  background.js  manifest.json  options.html  options.js  popup.html  popup.js
src/: lib.rs
