[package]
name = "rust-adblocker"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "High-performance ad blocker for Chrome using Rust and WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = ["console"] }
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
hashbrown = { version = "0.14.0", features = ["serde"] }  # Faster hashmap implementation with serde support
rayon = "1.7.0"       # Parallel processing
